--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
   </script>
  <link rel="canonical" href="https://dandowneyseo.github.io/north-reno-ai-marketing-engine-for-local-business-growth-2025-12-02-ombmv/" />
 <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="20f36d4be8dbb9381572" />
 </head>
  <body class="bg-gray-950 text-white">
   <!-- Header -->
